updating post and get URLs

--- a/views/main.html
+++ b/views/main.html
@@ -37,8 +37,8 @@ Exercise Types:
  <br><br>
  <b>Workout Date: {{thisDate}}</b><br>
  <b>Completed: {{UserDict.thisWorkout.Completed}}</b>
-<form action="/" method="POST" style="margin-top:0px;">
-
+ <!-- Test -->
+<form action="/postWorkout" method="POST" style="margin-top:0px;">
 <table style="font-size:20px; margin-top:25px; width:100%;">
   <tr>
     <th>Pattern</th>
