--- a/views/templates.html
+++ b/views/templates.html
@@ -13,7 +13,56 @@ table, th, td {
     <option value="4">16-25</option>
   </select> 
   <input style="margin:auto; margin-left:10px;" type='submit' onclick="" value='Select Level Group' name="selectLGroupBtn" id='btn'></input>
+  <br/><br/>
+  Change Block Number:
+  <select name="selectLevelGroup">
+    <option value="1">1-5</option>
+    <option value="2">6-10</option>
+    <option value="3">11-15</option>
+    <option value="4">16-25</option>
+  </select> 
+  <input style="margin:auto; margin-left:10px;" type='submit' onclick="" value='Select Level Group' name="selectLGroupBtn" id='btn'></input>
 </form>
+<h2>Viewing Workouts for Level Group: , Block Number: </h2>
+<div>
+    <h3>Week 1, Day 1</h3>
+    <table>
+    <tr>
+      <td>Exercise Type</td>
+      <td>Deload</td>
+      <td>Sets</td>
+      <td>Reps</td>
+      <td>RPE</td>
+      <td>Weight Type</td>
+      <td>Stop/Drop</td>
+    </tr>
+    <tr>
+      <td>a</td>
+      <td>b</td>
+      <td>c</td>
+      <td>d</td>
+      <td>e</td>
+      <td>
+        <select>
+          <option>1</option>
+          <option>2</option>
+        </select>
+      </td>
+      <td>
+          <select>
+            <option>1</option>
+            <option>2</option>
+          </select>            
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
+</div>
 
 <div style="font-size:20px; width:90%; margin:auto;">
   <div style="width:30%; display:inline-block;"> 
