--- a/views/signup.html
+++ b/views/signup.html
@@ -1,5 +1,5 @@
 SIGN UP
-<form method="POST" action="/api/user/signup">
+<form method="POST" action="/api/users" id="payment-form">
     <h3>Sign-up Information</h3>
     Username: <input name="username" value="" type="text"/>
     <br><br>
@@ -16,5 +16,65 @@ SIGN UP
     <br><br>
     Max Bench: <input name="maxBench" value="" type="number"/>    
     <br><br>
-    <input name="submit" type="submit" value="Sign Up"/>    
+    <!-- <input name="submit" type="submit" value="Sign Up"/>     -->
+
+    <div class="form-row">
+        <label for="card-element">
+          Credit or Debit card
+        </label><br><br>
+        <div id="card-element" style="padding-left:1vw; border-style:solid;">
+          <!-- a Stripe Element will be inserted here. -->
+        </div>
+        <!-- Used to display Element errors -->
+        <div id="card-errors" role="alert"></div>
+    </div>
+      <br><br>
+    <br><br>
+    <input id = "blue_btn" style="display:inline-block; vertical-align:top; margin-bottom:0vw; margin-top:0vw;" name="Payment_Btn" value="CONFIRM & PAY" type="submit">
+    <br>    
 </form>
+<script src="https://js.stripe.com/v3/"></script>
+<script>
+    // BUILT-IN STRIPE STUFF
+    var stripe = Stripe('pk_test_XXOQiKnnXqjJlJG5euwKirzj');
+    var elements = stripe.elements();
+    var style = {
+      base: {
+        fontSize: '16px',
+        lineHeight: '24px'
+      }
+    };
+    var card = elements.create('card', {style: style});
+    card.mount('#card-element');
+    card.addEventListener('change', function(event) {
+      var displayError = document.getElementById('card-errors');
+      if (event.error) {
+        displayError.textContent = event.error.message;
+      } else {
+        displayError.textContent = '';
+      }
+    });
+    var form = document.getElementById('payment-form');
+    form.addEventListener('submit', function(event) {
+      event.preventDefault();
+      stripe.createToken(card).then(function(result) {
+        if (result.error) {
+          var errorElement = document.getElementById('card-errors');
+          errorElement.textContent = result.error.message;
+        } else {
+          stripeTokenHandler(result.token);
+        }
+      });
+    });
+    // TAKE THE TOKEN FROM stripe.createToken(card), pass it to backend using key:token.id (like below)
+    // WE CAN CHANGE BELOW
+    function stripeTokenHandler(token) {
+      var form = document.getElementById('payment-form');
+      var hiddenInput = document.createElement('input');
+      hiddenInput.setAttribute('type', 'hidden');
+      hiddenInput.setAttribute('name', 'stripeToken');
+      hiddenInput.setAttribute('value', token.id);
+      form.appendChild(hiddenInput);
+      form.submit();
+    }
+</script>
