--- a/views/signup.html
+++ b/views/signup.html
@@ -19,6 +19,10 @@ SIGN UP
     <input name="submit" type="submit" value="Sign Up"/>    
 </form>
 <form method="POST" action="/subscribe" id="payment-form">
+  <select name='planID'>
+    <option value='AS_Gold'>Gold</option>
+    <option value='AS_Silver'>Silver</option>
+  </select>
     <div class="form-row">
         <label for="card-element">
           Credit or Debit card
